fix(windows): guard unaudited console constructors
Vis-Session: 273b749a-a507-4ba8-8f5f-87c50e87b7a6